# dev-labs

./: README.md
adb/: README.md
alpine/: Dockerfile  README.md
angular2/: README.md  namespaces-imports.js
ansible/: Makefile  README.md
astar/: README.md  app.rb
async/: concurrent.ex  concurrent.go  concurrent.java  concurrent.rb  concurrent.scala  jruby_callable.rb  jruby_fixed_pool.rb  jruby_jvm_futures.rb  jruby_sidekiq_cron.rb
base64/: README.md  converter.rb
bcrypt/: README.md
bit-array/: bit_array.rb
bit-masks/: date.rb
blockchain/: README.md
bookme/: .components  Gemfile
btrace/: README.md
cassandra/: README.md  docker-compose.yml
chef/: Dockerfile  Makefile  README.md  docker-compose.yml
consul/: README.md  docker-compose.yml
di-oop/: README.md
dip/: Main.cs  README.md
docker/: Dockerfile  Gemfile  README.md  Rakefile  docker-aliases.sh  docker-compose.yml
dry/: container.rb  validation.rb
dwe/: README.md
elixir/: DEBUG.md
encrypt/: encrypt.sh
envoy/: README.md  docker-compose.yml
es6/: README.md  cheatsheet.js
event-loop/: README.md
faye/: client.rb  index.html  package.json  server.js
fiber/: .air.toml  Makefile  (+2 more)
python3/: Makefile  pyproject.toml
python3/src/: async_io.py  classes.py  context_manager.py  coroutines.py  data_classes.py  decorators.py  descriptors.py  disasm.py  functions.py  generators.py  gil.py  inspect_objects.py  iterators.py  magic_methods.py  main.py  metaclasses.py  monkey_patching.py  mro.py  open_struct.py  processes.py  stdtypes.py  threads.py
python3/tests/: main_test.py
(+575 files in other folders)
