[tool.poetry]
name = "python3"
version = "0.1.0"
readme = "README.md"
package-mode = false
authors = ["knoxknox"]
description = "python3 labs"

[tool.ruff]
line-length = 120

[tool.poetry.dependencies]
python = "^3.13.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"
ipdb = "^0.13.13"
pytest = "^8.4.2"
bpython = "^0.25"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
