[tool.poetry]
name = "python3"
version = "0.1.0"
readme = "README.md"
package-mode = false
authors = ["knoxknox"]
description = "python3 labs"

[tool.ruff]
line-length = 120

[tool.poetry.dependencies]
python = "^3.14"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13"
ruff = "^0.14"
pytest = "^9.0"
bpython = "^0.26"
pytest-cov = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
